src/test/ui/extenv/extenv-arg-2-not-string-literal.stderr
error: expected string literal
  --> $DIR/extenv-arg-2-not-string-literal.rs:1:25
   |
LL | fn main() { env!("one", 10); }
   |                         ^^

error: aborting due to previous error

